<resources>
    <string name="app_name">Wallpaper Engine</string>

    <string name="search">Search</string>
    <string name="search_replies">Search replies</string>
    <string name="profile">Profile</string>

    <string name="wallpaper_engine_app_content_add_new_wallpaper">Add new wallpaper</string>

    <string name="main_set_add_new_wallpaper">Add new wallpaper</string>
    <string name="main_set_apply_wallpaper_button_text">Apply new wallpaper config</string>

    <string name="toast_cant_set_wallpaper_message">Can\'t set wallpaper</string>

    <string name="wallpaper_choose_button_text">Choose image</string>
    <string name="wallpaper_settings_title">Set your image:</string>
    <string name="wallpaper_preview_description">Image preview</string>
    <string name="wallpaper_settings_duration_title">Time</string>
    <string name="wallpaper_settings_duration_button_add_description">Add time button</string>
    <string name="wallpaper_settings_duration_button_reduce_description">Remove time button</string>
    <string name="wallpaper_settings_transition_title">Transition</string>
    <string name="wallpaper_settings_transition_button_add_description">Add transition button</string>
    <string name="wallpaper_settings_transition_button_reduce_description">Remove transition button</string>

    <string name="header_wallpapers_string">Wallpapers</string>
    <string name="header_wallpaper_finder_string">Wallpaper finder</string>

</resources>