<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"

        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/wallpaper_preview_settings_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintTop_toTopOf="parent"

            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/wallpaper_settings_wrappers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wallpaper_settings_title"
                    android:name="main_set_image_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallpaper_settings_title" />

                <EditText
                    android:id="@+id/wallpaper_settings_path"
                    android:name="main_set_image_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:inputType="text"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wallpaper_settings_title"
                    tools:ignore="LabelFor" />

                <LinearLayout
                    android:id="@+id/wallpaper_settings_duration_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/wallpaper_settings_duration_title"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/wallpaper_settings_duration_title"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/wallpaper_settings_duration_input"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/wallpaper_settings_duration_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:autofillHints="no"
                        android:inputType="text" />

                    <LinearLayout
                        android:id="@+id/wallpaper_settings_duration_buttons_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/wallpaper_settings_duration_button_add"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/wallpaper_settings_duration_button_add_description"
                            android:scaleType="fitCenter"

                            app:srcCompat="@drawable/add" />

                        <ImageButton
                            android:id="@+id/wallpaper_settings_duration_button_remove"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/wallpaper_settings_duration_button_remove_description"
                            android:scaleType="fitCenter"

                            app:srcCompat="@drawable/remove" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wallpaper_settings_transition_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/wallpaper_settings_transition_title"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:text="@string/wallpaper_settings_transition_title" />

                    <EditText
                        android:id="@+id/wallpaper_settings_transition_input"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:autofillHints="no"
                        android:inputType="text" />

                    <LinearLayout
                        android:id="@+id/wallpaper_settings_transition_buttons_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/wallpaper_settings_transition_button_add"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/wallpaper_settings_transition_button_add_description"
                            android:scaleType="fitCenter"

                            app:srcCompat="@drawable/add" />

                        <ImageButton
                            android:id="@+id/wallpaper_settings_transition_button_remove"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/wallpaper_settings_transition_button_remove_description"
                            android:scaleType="fitCenter"

                            app:srcCompat="@drawable/remove" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/wallpaper_preview"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/wallpaper_preview_description"

                app:srcCompat="@android:drawable/ic_menu_gallery" />
        </LinearLayout>

        <Button
            android:id="@+id/wallpaper_choose_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wallpaper_choose_button_text"

            app:layout_constraintBottom_toBottomOf="parent"

            tools:ignore="MissingConstraints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>